WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146814
It should be possible to run the OSR exit fuzzer
https://bugs.webkit.org/show_bug.cgi?id=146814
Summary
It should be possible to run the OSR exit fuzzer
Filip Pizlo
Reported
2015-07-09 15:22:51 PDT
Currently the jsc binary supports it, but there is no harness to wrap it.
Attachments
the patch
(10.10 KB, patch)
2015-07-09 15:57 PDT
,
Filip Pizlo
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-07-09 15:57:20 PDT
Created
attachment 256537
[details]
the patch
WebKit Commit Bot
Comment 2
2015-07-09 15:58:36 PDT
Attachment 256537
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/Options.cpp:392: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/runtime/Options.cpp:397: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3
2015-07-09 23:39:09 PDT
Comment on
attachment 256537
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=256537&action=review
Looks good to me.
> Tools/Scripts/jsc-stress-test-helpers/js-osr-exit-fuzz:126 > + $optionToUse = "--fireOSRExitFuzzAtOrAfter=1";
I think there could be a better name for this option. Will this always fire at and after the index passed in? If so, maybe: "fireOSRExitFuzzStartingAt"
Filip Pizlo
Comment 4
2015-07-10 13:55:34 PDT
(In reply to
comment #3
)
> Comment on
attachment 256537
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=256537&action=review
> > Looks good to me. > > > Tools/Scripts/jsc-stress-test-helpers/js-osr-exit-fuzz:126 > > + $optionToUse = "--fireOSRExitFuzzAtOrAfter=1"; > > I think there could be a better name for this option. Will this always fire > at and after the index passed in? > If so, maybe: "fireOSRExitFuzzStartingAt"
Fair point. Maybe we can change that in another patch - I've already landed a lot of code that calls it fireOSRExitFuzzAtOrAfter.
Mark Lam
Comment 5
2015-07-10 14:10:06 PDT
Comment on
attachment 256537
[details]
the patch r=me
Filip Pizlo
Comment 6
2015-07-10 14:17:18 PDT
Landed in
http://trac.webkit.org/changeset/186688
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug